feat: sea gregan enlaces a redes sociales

--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
       <li>Pesca deportiva</li>
       <li>Snorkel y avistamiento de fauna marina</li>
       <li>Excursiones a islas</li>
+      <li>Hablamos ingles</li>
     </ul>
   </section>
 
@@ -70,9 +71,18 @@
     <a href="https://wa.me/526131149103" class="whatsapp-button">Enviar mensaje</a>
   </section>
 
-  <footer>
-    <p>© 2025 Fishing Geer Charters | Loreto, B.C.S.</p>
-  </footer>
+ <footer>
+  <p>© 2025 Fishing Geer Charters | Loreto, B.C.S.</p>
+  <div class="social-buttons">
+    <a href="https://www.facebook.com/profile.php?id=61565649097424" target="_blank" rel="noopener" aria-label="Facebook">
+      <img src="img/Facebook_icon.png" alt="Facebook" class="social-icon" />
+    </a>
+    <a href="https://www.instagram.com/fishinggeercharters/#" target="_blank" rel="noopener" aria-label="Instagram">
+      <img src="img/Instagram-icono.jpeg" alt="Instagram" class="social-icon" />
+    </a>
+  </div>
+</footer>
+
 
   <script src="script.js"></script>
 </body>
