--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
   <div class="container">
     <img src="img/fishing-geer-logo.jpg" alt="Fishing Geer Charters" class="logo" />
     
-    
-    <button class="menu-toggle" aria-label="Abrir menú">
-      ☰
-    </button>
+ <button class="menu-toggle" type="button" aria-label="Abrir menú">
+  ☰
+</button>
+
 
     <nav class="nav">
       <ul class="nav-menu">
