--- a/index.html
+++ b/index.html
@@ -2,86 +2,202 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Fishing Geer Charters | Loreto, BCS</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Fishing Geer Charters</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
 
-<header class="site-header">
+  <!-- HEADER -->
+  <header class="site-header">
+    <div class="container d-flex justify-content-between align-items-center">
+      <img src="img/fishing geer logo.jpg" alt="Fishing Geer Charters" class="logo" />
+      
+      <button type="button" class="btn btn-outline-secondary btn-sm" id="lang-toggle">EN</button>
+
+      <nav class="navbar navbar-expand-lg">
+        <button class="navbar-toggler ms-2" type="button" data-bs-toggle="collapse" data-bs-target="#mainMenu" aria-label="Abrir menú de navegación">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="mainMenu">
+          <ul class="navbar-nav ms-auto nav-menu">
+            <li class="nav-item"><a class="nav-link" href="#sobre" data-i18n="about">Sobre nosotros</a></li>
+            <li class="nav-item"><a class="nav-link" href="#servicios" data-i18n="services">Servicios</a></li>
+            <li class="nav-item"><a class="nav-link" href="#galeria" data-i18n="gallery">Galería</a></li>
+            <li class="nav-item"><a class="nav-link" href="#contacto" data-i18n="contact">Contacto</a></li>
+          </ul>
+        </div>
+      </nav>
+    </div>
+  </header>
+
+  <!-- HERO SECTION (opcional) --><!-- HERO SECTION con video de fondo -->
+<!-- HERO SECTION con video más pequeño y texto arriba -->
+<section class="hero-section bg-aqua text-center text-white py-5">
   <div class="container">
-    <img src="img/fishing-geer-logo.jpg" alt="Fishing Geer Charters" class="logo" />
-    
- <button class="menu-toggle" type="button" aria-label="Abrir menú">
-  ☰
-</button>
-    <nav class="nav">
-      <ul class="nav-menu">
-        <li><a href="#sobre">Sobre nosotros</a></li>
-        <li><a href="#servicios">Servicios</a></li>
-        <li><a href="#galeria">Galería</a></li>
-        <li><a href="#contacto">Contacto</a></li>
-      </ul>
-    </nav>
-  </div>
-</header>
+    <h1 class="display-5 fw-bold mb-4">Explora Loreto como nunca antes</h1>
 
-
- <section class="hero-slider">
-  <div class="slider">
-    <div class="slide"><img src="img/pesca-en-loreto.jpg" alt="Pesca en Loreto" /></div>
-    <div class="slide"><img src="img/tour-en-bote.jpg" alt="Tour en bote" /></div>
-    <div class="slide"><img src="img/aventura-marina.jpg" alt="Aventura marina" /></div>
+    <div class="video-wrapper mx-auto">
+      <video autoplay muted loop playsinline class="hero-video">
+        <source src="vid/VID-20250604-WA0010.mp4" type="video/mp4">
+        Tu navegador no soporta videos HTML5.
+      </video>
+    </div>
   </div>
 </section>
 
-  <section id="sobre">
-    <h2>Bienvenidos a Fishing Geer Charters</h2>
-    <p>Explora las maravillas del Mar de Cortés con nuestros tours personalizados de pesca y paseos en bote en Loreto, B.C.S.</p>
+
+
+
+  <!-- SECCIÓN SOBRE NOSOTROS -->
+<main class="main-centered">
+  <section id="sobre" class="container py-5">
+    <h2 data-i18n="about">Bienvenidos a Fishing Geer Charters</h2>
+    <p data-i18n="about-text">Explora las maravillas del Mar de Cortés con nuetros tour personalizados de pesca y paseos en bote, y llevate experiencias únicas que solo Fishing Geer Charters te brinda en  Loreto, BCS.</p>
   </section>
 
-  <section id="servicios">
-    <h2>Servicios</h2>
+  <!-- SECCIÓN SERVICIOS -->
+  <section id="servicios" class="container py-5">
+    <h2 data-i18n="services">Servicios</h2>
     <ul>
-      <li>Paseos en bote privado</li>
-      <li>Pesca deportiva</li>
-      <li>Snorkel y avistamiento de fauna marina</li>
-      <li>Excursiones a islas</li>
-      <li>Hablamos ingles</li>
+      <li data-i18n="tour1">Paseos en bote privado</li>
+      <li data-i18n="tour2">Excursiones en las islas</li>
+      <li data-i18n="tour3">Pesca deportiva</li>
+      <li data-i18n="tour4">Snorkel y avistamiento de fauna marina</li>
+      <li data-i18n="tour5"> Hablamos ingles</li>
     </ul>
   </section>
+</main>
 
-  <section id="galeria" class="galeria">
-    <h2>Galería</h2>
-    <div class="carousel-loop">
-      <img src="img/bote.jpg"  alt ="Bote en el mar"/>
-      <img src="img/islas.jpg" alt="Islas" />
-      <img src="img/orcas.jpg"  alt="Orcas"/>
-      <img src="img/pesca-2.jpg"  alt=" Pesca"/>
-      <img src="img/pesca.jpg" alt="Pesca"/>
-      <img src="img/ballena.jpg" alt="Ballena" />
+  <!-- GALERÍA -->
+  <section id="galeria" class="container py-5 galeria">
+    <h2 data-i18n="gallery">Galería</h2>
+
+    <div id="carouselExample" class="carousel slide custom-carousel" data-bs-ride="carousel">
+      <div class="carousel-inner">
+        <div class="carousel-item active"><img src="img/atardecer.jpg" class="d-block w-100 img-thumbnail gallery-thumb" alt="Foto 1"></div>
+        <div class="carousel-item"><img src="img/ballena.jpg" class="d-block w-100 img-thumbnail gallery-thumb" alt="Foto 2"></div>
+        <div class="carousel-item"><img src="img/aventura-marina.jpg" class="d-block w-100 img-thumbnail gallery-thumb" alt="Foto 3"></div>
+        <div class="carousel-item"><img src="img/bote.jpg" class="d-block w-100 img-thumbnail gallery-thumb" alt="Foto 3"></div>
+        <div class="carousel-item"><img src="img/cabrilla.jpg" class="d-block w-100 img-thumbnail gallery-thumb" alt="Foto 3"></div>
+        <div class="carousel-item"><img src="img/caparazon.jpg" class="d-block w-100 img-thumbnail gallery-thumb" alt="Foto 3"></div>
+        <div class="carousel-item"><img src="img/cueva.jpg" class="d-block w-100 img-thumbnail gallery-thumb" alt="Foto 3"></div>
+        <div class="carousel-item"><img src="img/dorado.jpg" class="d-block w-100 img-thumbnail gallery-thumb" alt="Foto 3"></div>
+        <div class="carousel-item"><img src="img/islas.jpg" class="d-block w-100 img-thumbnail gallery-thumb" alt="Foto 3"></div>
+        <div class="carousel-item"><img src="img/jurel.jpg" class="d-block w-100 img-thumbnail gallery-thumb" alt="Foto 3"></div>
+        <div class="carousel-item"><img src="img/lobos.jpg" class="d-block w-100 img-thumbnail gallery-thumb" alt="Foto 3"></div>
+        <div class="carousel-item"><img src="img/nadando.jpg" class="d-block w-100 img-thumbnail gallery-thumb" alt="Foto 3"></div>
+        <div class="carousel-item"><img src="img/orcas.jpg" class="d-block w-100 img-thumbnail gallery-thumb" alt="Foto 3"></div>
+        <div class="carousel-item"><img src="img/pesca-2.jpg" class="d-block w-100 img-thumbnail gallery-thumb" alt="Foto 3"></div>
+        <div class="carousel-item"><img src="img/pesca-en-loreto.jpg" class="d-block w-100 img-thumbnail gallery-thumb" alt="Foto 3"></div>
+        <div class="carousel-item"><img src="img/pesca.jpg" class="d-block w-100 img-thumbnail gallery-thumb" alt="Foto 3"></div>
+        <div class="carousel-item"><img src="img/piedras.jpg" class="d-block w-100 img-thumbnail gallery-thumb" alt="Foto 3"></div>
+        <div class="carousel-item"><img src="img/playa.jpg" class="d-block w-100 img-thumbnail gallery-thumb" alt="Foto 3"></div>
+        <div class="carousel-item"><img src="img/rio.jpg" class="d-block w-100 img-thumbnail gallery-thumb" alt="Foto 3"></div>
+        <div class="carousel-item"><img src="img/salbavidas.jpg" class="d-block w-100 img-thumbnail gallery-thumb" alt="Foto 3"></div>
+        <div class="carousel-item"><img src="img/tour-en-bote.jpg" class="d-block w-100 img-thumbnail gallery-thumb" alt="Foto 3"></div>
+        <div class="carousel-item"><img src="img/sol.jpg" class="d-block w-100 img-thumbnail gallery-thumb" alt="Foto 3"></div>
+      </div>
+      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev" aria-label="Anterior">
+        <span class="carousel-control-prev-icon"></span>
+      </button>
+      <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next" aria-label="Siguiente">
+        <span class="carousel-control-next-icon"></span>
+      </button>
     </div>
   </section>
 
-  <section id="contacto">
-    <h2>Contáctanos</h2>
-    <p>Agenda tu tour por WhatsApp:</p>
-    <a href="https://wa.me/526131149103" class="whatsapp-button">Enviar mensaje</a>
-  </section>
+  <div class="social-links text-center my-4">
+  <a href="https://www.facebook.com/profile.php?id=61565649097424" 
+     target="_blank"  
+     rel="noopener noreferrer" 
+     class="btn btn-outline-primary btn-sm mx-2 rounded-circle"  
+     title="Facebook">
+    <i class="fab fa-facebook-f"></i>
+  </a>
 
- <footer>
-  <p>© 2025 Fishing Geer Charters | Loreto, B.C.S.</p>
-  <div class="social-buttons">
-    <a href="https://www.facebook.com/profile.php?id=61565649097424" target="_blank" rel="noopener" aria-label="Facebook">
-      <img src="img/Facebook_icon.png" alt="Facebook" class="social-icon" />
-    </a>
-    <a href="https://www.instagram.com/fishinggeercharters/#" target="_blank" rel="noopener" aria-label="Instagram">
-      <img src="img/Instagram-icono.jpeg" alt="Instagram" class="social-icon" />
-    </a>
+  <a href="https://www.instagram.com/fishinggeercharters/#" 
+     target="_blank"  
+     rel="noopener noreferrer" 
+     class="btn btn-outline-danger btn-sm mx-2 rounded-circle"  
+     title="Instagram">
+    <i class="fab fa-instagram"></i>
+  </a>
+
+  <a href="https://wa.me/526131149103" 
+     target="_blank"  
+     rel="noopener noreferrer" 
+     class="btn btn-outline-success btn-sm mx-2 rounded-circle"  
+     title="WhatsApp">
+    <i class="fab fa-whatsapp"></i>
+  </a>
+</div>
+
+
+
+  <!-- FOOTER -->
+  <footer class="text-white text-center py-3">
+    <p>&copy; 2025 Fishing Geer Charters</p>
+  </footer>
+
+  <!-- VISTA MODAL PARA IMÁGENES -->
+  <div id="imageModal" class="modal fade" tabindex="-1">
+    <div class="modal-dialog modal-lg modal-dialog-centered">
+      <div class="modal-content bg-transparent border-0">
+        <img id="modalImage" src="" alt="Vista ampliada" class="img-fluid rounded shadow">
+      </div>
+    </div>
   </div>
-</footer>
 
+  <!-- SCRIPTS -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+  <script>
+    const langToggle = document.getElementById("lang-toggle");
+    const translations = {
+      es: {
+        about: "Bienvenidos a Fishing Geer Charters",
+        aboutText: "Explora las maravillas del Mar de Cortés con nuetros tour personalizados de pesca y paseos en bote, y llevate experiencias únicas que solo Fishing Geer Charters te brinda en  Loreto, BCS.",
+        services: "Servicios",
+        tour1: "Paseos en bote",
+        tour2: "Excursiones en las islas",
+        tour3: "Pesca deportiva",
+        tour4: "Snorkel y avistamiento de fauna marina",
+        tour5: "Hablamos inglés",
+        gallery: "Galería",
+        contact: "Contacto",
+      },
+      en: {
+        about: "Welcome to Fishing Geer Charters",
+        aboutText: "Explore the wonders of the Sea of Cortez with our personalized fishing and boat tours, and take home unique experiences that only Fishing Geer Charters can offer in Loreto, BCS.",
+        services: "Services",
+        tour1: "Boat tours",
+        tour2: "Island excursions",
+        tour3: "Sport fishing",
+        tour4: "Snorkeling and marine wildlife watching",
+        tour5: "We speak English",
+        gallery: "Gallery",
+        contact: "Contact",
+      }
+    };
+    let currentLang = "es";
+    langToggle.addEventListener("click", () => {
+      currentLang = currentLang === "es" ? "en" : "es";
+      langToggle.textContent = currentLang === "es" ? "EN" : "ES";
+      document.querySelectorAll("[data-i18n]").forEach(el => {
+        const key = el.getAttribute("data-i18n");
+        el.textContent = translations[currentLang][key];
+      });
+    });
 
-  <script src="script.js"></script>
+    // Modal de imagen
+    document.querySelectorAll(".gallery-thumb").forEach(img => {
+      img.addEventListener("click", () => {
+        document.getElementById("modalImage").src = img.src;
+        new bootstrap.Modal(document.getElementById("imageModal")).show();
+      });
+    });
+  </script>
 </body>
 </html>
