feat: se mueve el texto justificaDO

--- a/index.html
+++ b/index.html
@@ -157,6 +157,7 @@
     const langToggle = document.getElementById("lang-toggle");
     const translations = {
       es: {
+        display: "Explora Loreto como nunca antes",
         about: "Bienvenidos a Fishing Geer Charters",
         aboutText: "Explora las maravillas del Mar de Cortés con nuetros tour personalizados de pesca y paseos en bote, y llevate experiencias únicas que solo Fishing Geer Charters te brinda en  Loreto, BCS.",
         services: "Servicios",
@@ -169,6 +170,7 @@
         contact: "Contacto",
       },
       en: {
+        display: "Explore Loreto like never before",
         about: "Welcome to Fishing Geer Charters",
         aboutText: "Explore the wonders of the Sea of Cortez with our personalized fishing and boat tours, and take home unique experiences that only Fishing Geer Charters can offer in Loreto, BCS.",
         services: "Services",
