--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 
   <!-- HEADER -->
  <header class="site-header">
-  <div class="container">
-    <nav class="navbar navbar-expand-lg align-items-center">
+  <div class="container d-flex justify-content-between align-items-center">
+    <nav class="navbar navbar-expand-lg flex-grow-1 align-items-center">
       <a class="navbar-brand" href="#">
         <img src="img/fishing geer logo.jpg" alt="Fishing Geer Charters" class="logo" />
       </a>
@@ -22,18 +22,23 @@
       </button>
 
       <div class="collapse navbar-collapse justify-content-end" id="mainMenu">
-        <ul class="navbar-nav me-3">
+        <ul class="navbar-nav">
           <li class="nav-item"><a class="nav-link" href="#sobre" data-i18n="navAbout">Sobre nosotros</a></li>
           <li class="nav-item"><a class="nav-link" href="#servicios" data-i18n="services">Servicios</a></li>
           <li class="nav-item"><a class="nav-link" href="#galeria" data-i18n="gallery">Galería</a></li>
           <li class="nav-item"><a class="nav-link" href="#contacto" data-i18n="contact">Contacto</a></li>
         </ul>
-        <!-- Botón de idioma a la derecha -->
-        <button type="button" class="btn btn-outline-secondary btn-sm" id="lang-toggle">EN</button>
       </div>
     </nav>
+    <!-- Botón idioma visible en móvil -->
+<button type="button" class="btn btn-outline-secondary btn-sm d-inline d-lg-none position-absolute top-0 end-0 m-2" id="lang-toggle-mobile">EN</button>
+
+
+    <!-- Botón de idioma visible SIEMPRE -->
+    <button type="button" class="btn btn-outline-secondary btn-sm ms-2 d-none d-lg-inline" id="lang-toggle">EN</button>
   </div>
 </header>
+
 
 
   <!-- HERO SECTION (opcional) --><!-- HERO SECTION con video de fondo -->
