feat: se agregan iconos.

--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Edu+SA+Hand:wght@400..700&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Playpen+Sans:wght@100..800&family=Roboto+Mono:ital,wght@0,100..700;1,100..700&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+
 </head>
 <body>
 
@@ -68,20 +70,36 @@
 <main class="main-centered">
   <section id="sobre" class="container py-5">
     <h2 data-i18n="about">Bienvenidos a Fishing Geer Charters</h2>
-   <p id="about-text" data-i18n="aboutText">Explora las maravillas del Mar de Cortés con nuetros tour personalizados de pesca y paseos en bote, y llevate experiencias únicas que solo Fishing Geer Charters te brinda en  Loreto, BCS.</p>
+   <p id="about-text" data-i18n="aboutText">Explora las maravillas del Mar de Cortés en el bello puerto de Loreto B. C. S. con nuestros Tours personalizados de pesca y paseos en bote, llevate experiencias unicas como solo Fishing Geer Charters te puede brindar. </p>
   </section>
 
   <!-- SECCIÓN SERVICIOS -->
-  <section id="servicios" class="container py-5">
-    <h2 data-i18n="services">Servicios</h2>
-    <ul>
-      <li data-i18n="tour1">Paseos en bote privado</li>
-      <li data-i18n="tour2">Excursiones en las islas</li>
-      <li data-i18n="tour3">Pesca deportiva</li>
-      <li data-i18n="tour4">Snorkel y avistamiento de fauna marina</li>
-      <li data-i18n="tour5"> Hablamos ingles</li>
-    </ul>
-  </section>
+<section id="servicios" class="container py-5 text-center">
+  <h2 data-i18n="services" class="mb-4">Servicios</h2>
+  <ul class="list-unstyled text-start d-inline-block">
+    <li>
+      <i class="fas fa-ship me-2 text-primary"></i>
+      <span data-i18n="tour1">Paseos en bote privado</span>
+    </li>
+    <li>
+      <i class="fa-solid fa-person-hiking me-2 text-success"></i>
+      <span data-i18n="tour2">Excursiones en las islas</span>
+    </li>
+    <li>
+      <i class="fas fa-fish me-2 text-danger"></i>
+      <span data-i18n="tour3">Pesca deportiva</span>
+    </li>
+    <li>
+      <i class="fas fa-water me-2 text-info"></i>
+      <span data-i18n="tour4">Snorkel y avistamiento de fauna marina</span>
+    </li>
+    <li>
+      <i class="fas fa-language me-2 text-warning"></i>
+      <span data-i18n="tour5">Servicio bilingüe (español e inglés)</span>
+    </li>
+  </ul>
+</section>
+
 </main>
 
   <!-- GALERÍA -->
@@ -175,13 +193,13 @@
       display: "Explora Loreto como nunca antes",
       navAbout: "Sobre nosotros",
       about: "Bienvenidos a Fishing Geer Charters",
-      aboutText: "Explora las maravillas del Mar de Cortés con nuestros tours personalizados de pesca y paseos en bote, y llevate experiencias únicas que solo Fishing Geer Charters te brinda en  Loreto, BCS.",
+      aboutText: "Explora las maravillas del Mar de Cortés en el bello puerto de Loreto B. C. S. con nuestros Tours personalizados de pesca y paseos en bote, llevate experiencias unicas como solo Fishing Geer Charters te puede brindar.",
       services: "Servicios",
       tour1: "Paseos en bote",
       tour2: "Excursiones en las islas",
       tour3: "Pesca deportiva",
       tour4: "Snorkel y avistamiento de fauna marina",
-      tour5: "Hablamos inglés",
+      tour5: "Servicio bilingüe (español E inglés)",
       gallery: "Galería",
       contact: "Contacto",
     },
@@ -189,13 +207,13 @@
       display: "Explore Loreto like never before",
       navAbout: "About Us",
       about: "Welcome to Fishing Geer Charters",
-      aboutText: "Explore the wonders of the Sea of Cortez with our personalized fishing and boat tours, and take home unique experiences that only Fishing Geer Charters can offer in Loreto, BCS.",
+      aboutText: "Explore the wonders of the Sea of Cortez in the beautiful port of Loreto B.C.S. with our personalized fishing and boat tours, take unique experiences that only Fishing Geer Charters can offer.",
       services: "Services",
       tour1: "Boat tours",
       tour2: "Island excursions",
       tour3: "Sport fishing",
       tour4: "Snorkeling and marine wildlife watching",
-      tour5: "We speak English",
+      tour5: "Bilingual service (Spanish and English)",
       gallery: "Gallery",
       contact: "Contact",
     }
