feat: se cambio la E por la e

--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
       tour2: "Excursiones en las islas",
       tour3: "Pesca deportiva",
       tour4: "Snorkel y avistamiento de fauna marina",
-      tour5: "Servicio bilingüe (español E inglés)",
+      tour5: "Servicio bilingüe (español e inglés)",
       gallery: "Galería",
       contact: "Contacto",
     },
